<resources>
    <string name="app_name">Edit.me</string>
    <string name="edit_me"><b>Edit.me</b></string>

    <string name="facebook_app_id">672878816484469</string>
    <string name="fb_login_protocol_scheme">fb672878816484469</string>

    <!--<string name="facebook_app_id">906633546380452</string>-->
    <!--<string name="fb_login_protocol_scheme">fb906633546380452</string>-->

    <string name="error">Error</string>
    <string name="ok">@android:string/ok</string>
    <string name="double_the_pleasure_double_the_place_you_order">Double the Pleasure,Double the Place you order</string>

    <string name="welcome"><b>Welcome</b></string>
    <string name="welcome_to"><b>Welcome to</b></string>
    <string name="welcome_to_edit_me_double_the_pleasure_double_the_place_your_order">Welcome to Edit me Double the Pleasure, Double the Place your order</string>
    <string name="let_s_start">LET\'S START</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="elapsed_time_days_hour">%1$d days remaining</string>
    <string name="elapsed_hour_minutes">%1$d hours remaining</string>
    <string name="elapsed_time_minutes">%d minutes remaining</string>
    <string name="elapsed_time_secounds">%1$d seconds remaining</string>
    <string name="signup">SignUp</string>
    <string name="sign_up_to_edit_me">Sign Up to Edit Me</string>
    <string name="name">Name</string>
    <string name="email_hint">name@example.com</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?&#160;</string>
    <string name="login_now">Login Now</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login_to_edit_me">Login to Edit Me</string>
    <string name="signup_now">Signup Now</string>
    <string name="dont_have_an_account">Don\'t have an account ? &#160;</string>
    <string name="forgot">Forgot</string>
    <string name="recovery_email_dialog">We will send a reset code to your recovery email to reset your password</string>
    <string name="recovery_email">Recovery email</string>
    <string name="send_email">Send Email</string>
    <string name="password_length">Password at least 8 character</string>
    <string name="required">Required</string>
    <string name="email_format">Email is not correct.</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="home">Home</string>
    <string name="order">Order</string>
    <string name="my_orders">My Orders</string>
    <string name="status">Status : </string>
    <string name="order_details">Order details</string>
    <string name="place_order">Place order</string>
    <string name="edit_image_message">Everything you need for photo editing, without the complex design software installation</string>
    <string name="place_your_order_now">Place your order now</string>
    <string name="profile">Profile</string>
    <string name="my_order_history">Order history</string>
    <string name="older">Older</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="account">Account</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="payments">Payments</string>
    <string name="about_us">About us</string>
    <string name="app_version">App version (%1$s)</string>
    <string name="logout_dialog">Are you really want to logout?</string>
    <string name="yes">@android:string/yes</string>
    <string name="no">@android:string/no</string>
    <string name="privacy_policy_url"><![CDATA[https://www.freeprivacypolicy.com/?sscid=61k3_97iol&]]></string>
    <string name="change_password">Change password</string>
    <string name="new_email">New email</string>
    <string name="update_email">Update mail</string>
    <string name="update_name">Update name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="incorrect_email_format">Email format is incorrect</string>
    <string name="name_updated">Name is updated</string>
    <string name="email_updated">Email is updated</string>
    <string name="update">Update</string>
    <string name="update_password">Update password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="minimum_8_character">Password must be 8 character long</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_not_match">Password donot match</string>
    <string name="add_details">Add details</string>
    <string name="add_order_description">Add order description</string>
    <string name="add_description">Add description</string>
    <string name="add_pictures">Add pictures</string>
    <string name="select_profile">Select image</string>
    <string name="image_description">Image description</string>
    <string name="add">Add</string>
    <string name="next">Next</string>
    <string name="please_add_image">Please add image first</string>
    <string name="total_images">Total images</string>
    <string name="remaining_images">Remaining images </string>
    <string name="delivery_time">Delivery date</string>


    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>

    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>\

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="email_exist">Email already exists</string>
    <string name="account_created">Account created.</string>
    <string name="verify_acount">Please check your email to verify your account</string>
    <string name="login_error">Login error</string>
    <string name="invalid_email_password">Invalid Email and password</string>
    <string name="email_sent">Email sent!</string>
    <string name="facebook_signin">FaceBook SignIn</string>
    <string name="google_signin">Google SignIn</string>


    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="fb_login_successs">FaceBook Login Successfully</string>
    <string name="fb_login_cancel">FaceBook Login Cancel</string>
    <string name="google_signin_failed">Google sign in failed</string>

    <plurals name="photo_count_template">
        <item quantity="one">%d Photo</item>
        <item quantity="other">%d Photos</item>
    </plurals>

    <!--<string name="photo_count_template">%1$d Photos</string>
    -->
    <string name="view_images">View images</string>
    <string name="completed">Completed</string>
    <string name="order_updated">Your order is updated</string>

    <string name="standard_date_format">DD/MM/YY</string>
    <string name="please_select_a_valid_date_order">Please select a valid order date</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="select_package">Select package</string>
    <string name="no_order_completed_yet">No order completed yet</string>
    <string name="no_order_found">No order found</string>
    <string name="create_order">Create order</string>
    <string name="description">Description</string>
    <string name="days4">Delivered within&#160;%1$d&#160;days</string>
    <string name="select_picture">Select Picture</string>
    <string name="google_pay_is_available">google pay is available</string>
    <string name="is_ready_to_pay_failed">isReadyToPay failed</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="password_updated">password updated</string>
    <string name="package_buy_successfully">Package  buy successfully</string>
    <string name="image_is_uploading">Your image is uploading</string>
    <string name="image">Image</string>
    <string name="uploaded_format">Uploaded:&#160;%1$d %%</string>
    <string name="image_upload_complete">Image&#160;%1$d upload complete</string>
    <string name="image_uploaded">Image upload complete</string>
    <string name="downloading_image">Downloading image</string>
    <string name="dowload_progress_template">Downloaded:&#160;%1$d %%"</string>
    <string name="image_download_complete">Image download complete</string>
    <string name="order_description">Order description</string>
    <string name="please_package">Please purchase package</string>
    <string name="your_image_description_here">Your image description</string>
    <string name="current_package">Current package</string>
    <string name="due_date">%1$d&#160;Days</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="select_file">Select file</string>
    <string name="change_number">Change number</string>
    <string name="total_images_template">Out of %1$d</string>
    <string name="internet_is_not_available">Internet not available</string>
    <string name="card_is_invalid">Card is invalid</string>
    <string name="pay_now">Pay now</string>
    <string name="payed_sussfully">Payed successfully</string>
    <string name="payment">Payment</string>
    <string name="please_wait_nyour_payment_is_processing">Please Wait\nyour payment is Processing</string>
    <string name="done">Next</string>
    <string name="intro1_title">Take your image</string>
    <string name="intro2_title">Upload your image</string>
    <string name="intro3_title">Download your edited image</string>
    <string name="limit_over">Your Limit is over</string>
    <string name="limit">Limit</string>
    <string name="Use">How to use</string>


</resources>
