<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/login_to_edit_me"
                    android:textAlignment="center"
                    android:textColor="#1A1A1A"
                    android:textSize="30sp"
                    android:visibility="gone" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:drawableLeft="@drawable/ic_email_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:textSize="15dp"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="15dp"

                        />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/forgot_password"
                        android:textColor="#1A1A1A"
                        android:textSize="15dp" />

                </RelativeLayout>


                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/buttonshape"
                    android:text="@string/login"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"

                    >

                    <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/btn_facebook"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="11dp"
                        android:layout_marginTop="12dp"

                        android:clickable="true"
                        android:src="@drawable/facebook" />


                    <de.hdodenhof.circleimageview.CircleImageView android:id="@+id/btn_googleplus"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"

                        android:layout_marginTop="12dp"
                        android:clickable="true"
                        android:src="@drawable/g_" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/dont_have_an_account"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/btn_signup_now"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/signup_now"
                        android:textAlignment="center"
                        android:textColor="@color/primaryColor"
                        android:textSize="15sp" />

                </LinearLayout>


            </LinearLayout>

            <FrameLayout
                android:id="@+id/progress_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="48dp"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/primaryDarkColor" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            app:cardCornerRadius="20dp">

            <ImageView
                android:id="@+id/close_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:src="@drawable/cancel_icon" />


        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>